# desktest

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  HUMAN_SHOULD_TEST.md  IDEA.md  LICENSE  Makefile  README.md  TODO.md  build.rs  clippy.toml  config.json.example  galculator-test.json  install.sh  instructions.md  instructions.md.example  next_task.md  prek.toml  task-schema.json  telemetry-backend-agent-prompt.md
animations/: .gitignore  package.json
dev-docs/: 07-05-2026-animation-scenes-code-review.md  macos-transition-plan.md  windows-ci-guide.md  windows-support-plan.md
docker/: Dockerfile  Dockerfile.electron  entrypoint.sh  execute-action.py  get-a11y-tree.py  screenshot_compare.py
docs/: attach-mode.md  ci.md  claude-cli-provider.md  codex-cli-provider.md  macos-support.md  remote-monitoring.md
examples/: Dockerfile.libreoffice  ELECTRON_QUICKSTART.md  README.md  electron-todo.json  gedit-save.json  libreoffice-calc.json  macos-electron.json  macos-native-textedit.json  macos-textedit.json  multi-app-terminal-gedit.json  windows-calculator.json
macos/: test_vm_agent.py  vm-agent-install.sh  vm-agent.py
scripts/: check_folder_sizes.sh  check_large_files.sh
skills/: claude-code-skill.md  desktest-skill.md
src/: artifacts.rs  bug_report.rs  cli.rs  codify.rs  config.rs  dashboard.html  docker.rs  error.rs  evaluator.rs  init_macos.rs  init_task.rs  init_windows.rs  input.rs  interactive.rs  logs.rs  main.rs  monitor.rs  monitor_server.rs  monitor_watcher.rs  observation.rs  orchestration.rs  redact.rs  (+15 more)
(+87 files in other folders)
