[package]
name = "desktest"
version = "0.8.0"
edition = "2024"

[[bin]]
name = "desktest"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bollard = "0.18"
base64 = "0.22"
tar = "0.4"
shell-escape = "0.1"
regex = "1"
csv = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
